--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,24 @@
-# Node modules
+# Node.js dependencies
 node_modules/
-
-# Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Dependency directories
-jspm_packages/
-
 # Build outputs
 dist/
 build/
 .cache/
-.next/
-out/
 coverage/
 
-# Environment files
-.env
-.env.local
-.env.*.local
+# React-specific
+client/node_modules/
+client/build/
+client/.env
+
+# Server-specific
+server/node_modules/
+server/.env
 
 # OS files
 .DS_Store
@@ -38,8 +27,3 @@ Thumbs.db
 # IDE settings
 .vscode/
 .idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
